--- a/events_and_exhibits.html
+++ b/events_and_exhibits.html
@@ -50,7 +50,7 @@
                         Technology will be delivering 3 lectures on the development of and where the future lies in this
                         exciting ‘space’.</p>
                     <div class="newsbox_img">
-                        <h3 class=" b_green text_white event_date" aria-label="22.09.23 - 18:00">22.09.23 - 18:00</h3>
+                        <h3 class=" b_green event_date" aria-label="22.09.23 - 18:00">22.09.23 - 18:00</h3>
                         <div class="product_img">
                             <img src="images/plane.png" alt="Visiting Professor of Aeronautics image">
                         </div>
@@ -62,7 +62,7 @@
                         and science displays. Bring your own sleeping bag and get ready to rough it as we go exploring
                         the wonders of science.</p>
                     <div class="newsbox_img">
-                        <h3 class=" b_green text_white event_date" aria-label="04.10.23 - 19:00"> 04.10.23 - 19:00</h3>
+                        <h3 class=" b_green event_date" aria-label="04.10.23 - 19:00"> 04.10.23 - 19:00</h3>
                         <div class="product_img"><img src="images/roberto-nickson-396152.jpg"
                                 alt="Night in the Museum image"></div>
                     </div>
@@ -74,7 +74,7 @@
                         power of the elements as we harness them. From solar energy powering lighting, to ‘Wind Island’
                         that shows how turbines are able to use and control wind to create power.</p>
                     <div class="newsbox_img">
-                        <h3 class=" b_green text_white event_date" aria-label="30.10.23">30.10.23</h3>
+                        <h3 class=" b_green event_date" aria-label="30.10.23">30.10.23</h3>
                         <div class="product_img"><img src="images/lightenergy.png"
                                 alt="Visiting Professor of Aeronautics image"></div>
                     </div>
