--- a/information.html
+++ b/information.html
@@ -98,34 +98,34 @@
                     <div class="green_underline">
                         <h2 class="bold big_title">Events and Exhibits</h2>
                     </div>
-                    <h4 class="fontsize1_1rem">News:</h4>
+                    <h3 class="fontsize1_1rem">News:</h3>
                     <div class="f_boxes_f links">
                         <a href="/events_and_exhibits.html#Professor_of_aeronautics">
-                            <p class="item fontsize1_1rem">Visiting Professor of Aeronautics</p>
+                            <h4 class="item fontsize1_1rem">Visiting Professor of Aeronautics</h4>
                         </a>
                         <a href="/events_and_exhibits.html#night_in_the_museum">
-                            <p class="item fontsize1_1rem">Night in the museum</p>
+                            <h4 class="item fontsize1_1rem">Night in the museum</h4>
                         </a>
                         <a href="/events_and_exhibits.html#energetica_echibiton_on_loan">
-                            <p class="item fontsize1_1rem">Energetica Echibiton on Loan</p>
+                            <h4 class="item fontsize1_1rem">Energetica Echibiton on Loan</h4>
                         </a>
                     </div>
                     <h3 class="fontsize1_1rem">Exhibits:</h3>
                     <div class="f_boxes_f links">
                         <a href="/events_and_exhibits.html#cosmology">
-                            <p class="item fontsize1_1rem">Cosmology</p>
+                            <h4 class="item fontsize1_1rem">Cosmology</h4>
                         </a>
                         <a href="/events_and_exhibits.html#evolution">
-                            <p class="item fontsize1_1rem">Evolution</p>
+                            <h4 class="item fontsize1_1rem">Evolution</h4>
                         </a>
                         <a href="/events_and_exhibits.html#biology_and_medicine">
-                            <p class="item fontsize1_1rem">Biology and Medicine</p>
+                            <h4 class="item fontsize1_1rem">Biology and Medicine</h4>
                         </a>
                         <a href="/events_and_exhibits.html#robotics_and_AI">
-                            <p class="item fontsize1_1rem">Robotic and AI</p>
+                            <h4 class="item fontsize1_1rem">Robotic and AI</h4>
                         </a>
                         <a href="/events_and_exhibits.html#ecology">
-                            <p class="item fontsize1_1rem">Ecology</p>
+                            <h4 class="item fontsize1_1rem">Ecology</h4>
                         </a>
                     </div>
                 </div>
