--- a/visit_us.html
+++ b/visit_us.html
@@ -133,7 +133,7 @@
         </div>
         <section class="visitus_page section_padding" id="explore_section">
             <h2 class="header_titlebox b_blue">Explore</h2>
-            <div class="flex_spacebetween content_wrap">
+            <div class="content_wrap">
                 <div class="flex_spacebetween" id="for_kids">
                     <div class="explore_box">
                         <h3 class="button gray explore_text text_black">For Kids</h3>
@@ -177,7 +177,7 @@
                     <div class="explore_box">
                         <h3 class="button gray explore_text text_black">Researchers</h3>
                         <figure class="black_square"></figure>
-                        <div class="product_img"><img src="/images/people-219985_1280.jpg"" alt=" Image of a
+                        <div class="product_img"><img src="/images/people-219985_1280.jpg" alt=" Image of a
                                 Researcher">
                         </div>
                     </div>
