changes form names

--- a/contact_us.html
+++ b/contact_us.html
@@ -57,12 +57,12 @@
                         <form class="message_area id=" message_area" method="post" enctype="text/plain">
                             <div class="message_input flex_spacebetween gap1rem">
                                 <div class="w_100">
-                                    <label for="name">Name</label>
-                                    <input class="w_100" type="text" name="name" id="name" placeholder="Your name">
+                                    <label for="messagename">Name</label>
+                                    <input class="w_100" type="text" name="messagename" id="messagename" placeholder="Your name">
                                 </div>
                                 <div class="w_100">
-                                    <label for="email">E-mail</label>
-                                    <input class="w_100" type="email" name="email" id="email" placeholder="Your email"
+                                    <label for="messageemail">E-mail</label>
+                                    <input class="w_100" type="email" name="messageemail" id="messageemail" placeholder="Your email"
                                         required>
                                 </div>
                             </div>
