--- a/visit_us.html
+++ b/visit_us.html
@@ -211,7 +211,7 @@
                         the museum.</p>
                     <p>You’ll be learning from a number of different academics and people who are passionate about
                         science and sharing it with the wider community. </p>
-                    <div class="padding-top2rem"><a href="/about_us.html" class="button b_green">Contact us here</a>
+                    <div class="padding-top2rem"><a href="/contact_us.html" class="button b_green">Contact us here</a>
                     </div>
                 </div>
                 <div>
