--- a/contact_us.html
+++ b/contact_us.html
@@ -34,7 +34,6 @@
                 </ul>
             </nav>
         </div>
-        </div>
     </header>
     <main>
         <section class="header_image" id="header_page">
@@ -54,7 +53,7 @@
                     </div>
                     <div class="padding1rem">
                         <p>Or you can send us a message here:</p>
-                        <form class="message_area id=" message_area" method="post" enctype="text/plain">
+                        <form class="message_area" id="message_area" method="post" enctype="text/plain">
                             <div class="message_input flex_spacebetween gap1rem">
                                 <div class="w_100">
                                     <label for="messagename">Name</label>
