--- a/about_us.html
+++ b/about_us.html
@@ -34,7 +34,6 @@
                 </ul>
             </nav>
         </div>
-        </div>
     </header>
     <main>
         <section class="header_image" id="header_page">
@@ -45,6 +44,7 @@
         <section class="section_padding content_wrap padding-top2rem" id="about_us_section">
             <div class="grid3fit padding1rem gridcenter flexcenter">
                 <div class="about_us_text">
+                    <h1 class="hidden_element">About us</h1>
                     <p>Over the course of human history, science has developed from our early understanding of fire,
                         wind, water, and earth to exploring everything from galaxies far away to the very building
                         blocks of life itself.</p>
