added describtion to each page

--- a/about_us.html
+++ b/about_us.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Science Museum - About us</title>
+    <meta name="describtion" content="Learn about our museum's rich history and our commitment to bringing science to life through over 1000 interactive exhibits. Join us on a journey of discovery.">
     <link rel="stylesheet" href="global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
