--- a/contact_us.html
+++ b/contact_us.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Science Museum - Contact us</title>
+    <meta name="describtion" content="Reach out to us for inquiries, feedback, or to plan your visit. Our team is here to assist you with any questions you may have. Get in touch today.">
     <link rel="stylesheet" href="global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -53,7 +54,7 @@
                     </div>
                     <div class="padding1rem">
                         <p>Or you can send us a message here:</p>
-                        <form class="message_area" id="message_area" method="post" enctype="text/plain">
+                        <form id="message_area" method="post" enctype="text/plain">
                             <div class="message_input flex_spacebetween gap1rem">
                                 <div class="w_100">
                                     <label for="messagename">Name</label>
