--- a/information.html
+++ b/information.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Science Museum - Information</title>
+    <meta name="describtion" content="Find essential information for planning your visit. Get details on prices, opening hours, etc. Prepare for an exciting journey into the world of science.">
     <link rel="stylesheet" href="global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
