--- a/visit_us.html
+++ b/visit_us.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Science Museum - Visit us</title>
+    <meta name="describtion" content="Plan your visit to our museum. Discover how to get here, learn about ticket options, and explore what awaits you when you step through our doors. Start your adventure now.">
     <link rel="stylesheet" href="global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,15 +47,15 @@
                 <div>
                     <div class="padding1rem csm_spes">
                         <h2>Community Science Museum</h2>
-                        <p>Verket 1</p>
-                        <p>2580 Folldal</p>
-                        <p class="map_icon hoverlink">Find on map</p>
+                        <p class="margin02rem">Verket 1</p>
+                        <p class="margin02rem">2580 Folldal</p>
+                        <p class="margin02rem map_icon hoverlink">Find on map</p>
                     </div>
                     <div class="padding1rem padding-top2rem">
-                        <div class="contact_us">
+                        <div>
                             <p class="bold">Contact us:</p>
-                            <p class="item">Phone: +47 38373635</p>
-                            <p class="item">E-mail: CSMuseum@museum.com</p>
+                            <p class="margin02rem item">Phone: +47 38373635</p>
+                            <p class="margin02rem item">E-mail: CSMuseum@museum.com</p>
                         </div>
                         <div class="social_media">
                             <a href="/">
