--- a/events_and_exhibits.html
+++ b/events_and_exhibits.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Science Museum - Events and Exhibition</title>
+    <meta name="describtion" content="Stay updated on our latest events and exhibits. Explore a diverse range of science-related showcases and experiences. Don't miss out on our upcoming attractions.">
     <link rel="stylesheet" href="global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
