Splitted Events and Exhibits into two pages, one events and one exhibits, also fixed the bolonging links

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <nav class="nav_right">
                 <ul>
                     <li><a href="/index.html" class="active_page">Home</a></li>
-                    <li><a href="/events_and_exhibits.html">Events and Exhibits</a></li>
+                    <li><a href="/events.html">Events</a></li>
+                    <li><a href="/exhibits.html">Exhibits</a></li>
                     <li><a href="/information.html">Information</a></li>
                     <li><a href="/visit_us.html">Visit us</a></li>
                     <li><a href="/about_us.html">About us</a></li>
@@ -53,7 +54,7 @@
             <div class="triobuttons">
                 <a href="/information.html#prices_i_p" class="button b_green triobutton">Prices</a>
                 <a href="/information.html" class="button b_green triobutton">Opening hours</a>
-                <a href="/events_and_exhibits.html" class="button b_green triobutton">Events and Exhibits</a>
+                <a href="/exhibits.html" class="button b_green triobutton">Exhibits</a>
             </div>
         </div>
         <div class="dark_background">
@@ -68,27 +69,27 @@
             </div>
         </div>
         <section class="h_s_news section_padding">
-            <a href="/events_and_exhibits.html#news_section">
+            <a href="/events.html#news_section">
                 <h2 class="header_titlebox b_green">News - Special Events & Exhibitions</h2>
             </a>
             <div class="grid3fit  content_wrap">
-                <a href="/events_and_exhibits.html#Professor_of_aeronautics" class="productbox text_black">
+                <a href="/events.html" class="productbox text_black">
                     <div class="product_img"><img src="images/plane.png" alt="Visiting Professor of Aeronautics image">
                     </div>
                     <h3>Visiting Professor of Aeronautics</h3>
                 </a>
-                <a href="/events_and_exhibits.html#night_in_the_museum" class="productbox text_black">
+                <a href="/events.html#night_in_the_museum" class="productbox text_black">
                     <div class="product_img"><img src="images/roberto-nickson-396152.jpg"
                             alt="Night in the Museum image"></div>
                     <h3>Night in the Museum</h3>
                 </a>
-                <a href="/events_and_exhibits.html#Energetica_exhibition_on_loan" class="productbox text_black">
+                <a href="/events.html#Energetica_exhibition_on_loan" class="productbox text_black">
                     <div class="product_img"><img src="images/lightenergy.png"
                             alt="Visiting Professor of Aeronautics image"></div>
                     <h3>Energetica Exhibition on Loan</h3>
                 </a>
             </div>
-            <div class="space"><a href="/events_and_exhibits.html#news_section" class="button b_green">Find out more</a>
+            <div class="space"><a href="/events.html#news_section" class="button b_green">Find out more</a>
             </div>
         </section>
         <section class="h_s_explore section_padding">
@@ -119,35 +120,35 @@
             <div class="space"><a href="/visit_us.html#explore_section" class="button b_blue">Find out more</a></div>
         </section>
         <section class="h_s_exhibition_s dark_background section_padding">
-            <a href="/events_and_exhibits.html#exhibition_spaces">
+            <a href="/exhibits.html#exhibition_spaces">
                 <h2 class="header_titlebox b_green">Exhibition Spaces</h2>
             </a>
             <div class="grid3fit  content_wrap">
-                <a href="/events_and_exhibits.html#cosmology" class="productbox">
+                <a href="/exhibits.html#cosmology" class="productbox">
                     <div class="product_img"><img src="images/celso-405219.jpg" alt="The moon image"></div>
                     <h3 class="text_white">Cosmology</h3>
                 </a>
-                <a href="/events_and_exhibits.html#evolution" class="productbox">
+                <a href="/exhibits.html#evolution" class="productbox">
                     <div class="product_img"><img src="images/evolution.png" alt="Image of people">
                     </div>
                     <h3 class="text_white">Evolution</h3>
                 </a>
-                <a href="/events_and_exhibits.html#biology_and_medicine" class="productbox">
+                <a href="/exhibits.html#biology_and_medicine" class="productbox">
                     <div class="product_img"><img src="images/heart-2607178_1920.jpg" alt="Image of a heart imitation">
                     </div>
                     <h3 class="text_white">Biology and Medicine</h3>
                 </a>
-                <a href="/events_and_exhibits.html#robotics_and_AI" class="productbox">
+                <a href="/exhibits.html#robotics_and_AI" class="productbox">
                     <div class="product_img"><img src="images/robot.png" alt="Image of a robot">
                     </div>
                     <h3 class="text_white">Robotics and AI</h3>
                 </a>
-                <a href="/events_and_exhibits.html#ecology" class="productbox">
+                <a href="/exhibits.html#ecology" class="productbox">
                     <div class="product_img"><img src="images/ecology.png" alt="Image of bottom vegetation"></div>
                     <h3 class="text_white">Ecology</h3>
                 </a>
             </div>
-            <div class="space"><a href="/events_and_exhibits.html#exhibition_spaces" class="button b_green">Find out
+            <div class="space"><a href="/exhibits.html#exhibition_spaces" class="button b_green">Find out
                     more</a></div>
         </section>
     </main>
@@ -206,25 +207,22 @@
                 </div>
             </div>
             <div class="f_boxes_f links links_f">
-                <a href="">
-                    <p class="item">Events and Exhibits</p>
-                </a>
-                <a href="">
+                <a href="/visit_us.html#get_involved">
                     <p class="item">Get involed</p>
                 </a>
-                <a href="">
+                <a href="/visit_us.html#explore_section">
                     <p class="item">Explore</p>
                 </a>
-                <a href="">
+                <a href="/information.html#prices_i_p">
                     <p class="item">Prices</p>
                 </a>
-                <a href="">
+                <a href="/information.html#accessibility">
                     <p class="item">Accessibility</p>
                 </a>
-                <a href="">
+                <a href="/information.html#shop">
                     <p class="item">Shop</p>
                 </a>
-                <a href="">
+                <a href="/information.html#food_and_drink">
                     <p class="item">Food and drink</p>
                 </a>
             </div>
