--- a/information.html
+++ b/information.html
@@ -27,7 +27,8 @@
             <nav class="nav_right">
                 <ul>
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/events_and_exhibits.html">Events and Exhibits</a></li>
+                    <li><a href="/events.html">Events</a></li>
+                    <li><a href="/exhibits.html">Exhibits</a></li>
                     <li><a href="/information.html" class="active_page">Information</a></li>
                     <li><a href="/visit_us.html">Visit us</a></li>
                     <li><a href="/about_us.html">About us</a></li>
@@ -75,7 +76,7 @@
                         <p class="ho_day_t">9:00 – 13:00</p>
                     </div>
                 </div>
-                <div class="boxmargin white_background padding1rem g_two">
+                <div class="boxmargin white_background padding1rem g_two" id="accessibility">
                     <div class="green_underline">
                         <h2 class="bold big_title">Accessibility</h2>
                     </div>
@@ -100,31 +101,31 @@
                     </div>
                     <h3 class="fontsize1_1rem">News:</h3>
                     <div class="f_boxes_f links">
-                        <a href="/events_and_exhibits.html#Professor_of_aeronautics">
+                        <a href="/events.html#Professor_of_aeronautics">
                             <h4 class="item fontsize1_1rem">Visiting Professor of Aeronautics</h4>
                         </a>
-                        <a href="/events_and_exhibits.html#night_in_the_museum">
+                        <a href="/events.html#night_in_the_museum">
                             <h4 class="item fontsize1_1rem">Night in the museum</h4>
                         </a>
-                        <a href="/events_and_exhibits.html#energetica_echibiton_on_loan">
+                        <a href="/events.html#energetica_echibiton_on_loan">
                             <h4 class="item fontsize1_1rem">Energetica Echibiton on Loan</h4>
                         </a>
                     </div>
                     <h3 class="fontsize1_1rem">Exhibits:</h3>
                     <div class="f_boxes_f links">
-                        <a href="/events_and_exhibits.html#cosmology">
+                        <a href="/exhibits.html#cosmology">
                             <h4 class="item fontsize1_1rem">Cosmology</h4>
                         </a>
-                        <a href="/events_and_exhibits.html#evolution">
+                        <a href="/exhibits.html#evolution">
                             <h4 class="item fontsize1_1rem">Evolution</h4>
                         </a>
-                        <a href="/events_and_exhibits.html#biology_and_medicine">
+                        <a href="/exhibits.html#biology_and_medicine">
                             <h4 class="item fontsize1_1rem">Biology and Medicine</h4>
                         </a>
-                        <a href="/events_and_exhibits.html#robotics_and_AI">
+                        <a href="/exhibits.html#robotics_and_AI">
                             <h4 class="item fontsize1_1rem">Robotic and AI</h4>
                         </a>
-                        <a href="/events_and_exhibits.html#ecology">
+                        <a href="/exhibits.html#ecology">
                             <h4 class="item fontsize1_1rem">Ecology</h4>
                         </a>
                     </div>
@@ -132,7 +133,7 @@
             </div>
         </section>
         <div class="content_wrap section_padding">
-            <div class="boxmargin  text_img_group section_padding">
+            <div class="boxmargin  text_img_group section_padding" id="shop">
                 <div class="group_info padding1rem">
                     <div class="green_underline">
                         <h2 class="bold big_title">Shop</h2>
@@ -146,7 +147,7 @@
                 </div>
 
             </div>
-            <div class="boxmargin  text_img_group section_padding">
+            <div class="boxmargin  text_img_group section_padding" id="food_and_drink">
                 <div class="group_info padding1rem">
                     <div class="blue_underline">
                         <h2 class="bold big_title">Food and Drink</h2>
@@ -160,7 +161,7 @@
             </div>
         </div>
         <section class="section_padding">
-            <h2 class="header_titlebox b_green ">Get involed</h2>
+            <h2 class="header_titlebox b_green ">Get involved</h2>
             <div class="grid3fit content_wrap">
                 <div>
                     <h3 class="green_underline w_100">Support</h3>
@@ -249,25 +250,22 @@
                 </div>
             </div>
             <div class="f_boxes_f links links_f">
-                <a href="">
-                    <p class="item">Events and Exhibits</p>
-                </a>
-                <a href="">
+                <a href="/visit_us.html#get_involved">
                     <p class="item">Get involed</p>
                 </a>
-                <a href="">
+                <a href="/visit_us.html#explore_section">
                     <p class="item">Explore</p>
                 </a>
-                <a href="">
+                <a href="/information.html#prices_i_p">
                     <p class="item">Prices</p>
                 </a>
-                <a href="">
+                <a href="/information.html#accessibility">
                     <p class="item">Accessibility</p>
                 </a>
-                <a href="">
+                <a href="/information.html#shop">
                     <p class="item">Shop</p>
                 </a>
-                <a href="">
+                <a href="/information.html#food_and_drink">
                     <p class="item">Food and drink</p>
                 </a>
             </div>
