--- a/visit_us.html
+++ b/visit_us.html
@@ -27,7 +27,8 @@
             <nav class="nav_right">
                 <ul>
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/events_and_exhibits.html">Events and Exhibits</a></li>
+                    <li><a href="/events.html">Events</a></li>
+                    <li><a href="/exhibits.html">Exhibits</a></li>
                     <li><a href="/information.html">Information</a></li>
                     <li><a href="/visit_us.html" class="active_page">Visit us</a></li>
                     <li><a href="/about_us.html">About us</a></li>
@@ -193,8 +194,8 @@
                 </div>
             </div>
         </section>
-        <section class="section_padding">
-            <h2 class="header_titlebox b_green ">Get involed</h2>
+        <section class="section_padding" id="get_involved">
+            <h2 class="header_titlebox b_green ">Get involved</h2>
             <div class="grid3fit content_wrap">
                 <div>
                     <h3 class="green_underline w_100">Support</h3>
@@ -283,25 +284,22 @@
                 </div>
             </div>
             <div class="f_boxes_f links links_f">
-                <a href="">
-                    <p class="item">Events and Exhibits</p>
-                </a>
-                <a href="">
+                <a href="/visit_us.html#get_involved">
                     <p class="item">Get involed</p>
                 </a>
-                <a href="">
+                <a href="/visit_us.html#explore_section">
                     <p class="item">Explore</p>
                 </a>
-                <a href="">
+                <a href="/information.html#prices_i_p">
                     <p class="item">Prices</p>
                 </a>
-                <a href="">
+                <a href="/information.html#accessibility">
                     <p class="item">Accessibility</p>
                 </a>
-                <a href="">
+                <a href="/information.html#shop">
                     <p class="item">Shop</p>
                 </a>
-                <a href="">
+                <a href="/information.html#food_and_drink">
                     <p class="item">Food and drink</p>
                 </a>
             </div>
