--- a/about_us.html
+++ b/about_us.html
@@ -27,7 +27,8 @@
             <nav class="nav_right">
                 <ul>
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/events_and_exhibits.html">Events and Exhibits</a></li>
+                    <li><a href="/events.html">Events</a></li>
+                    <li><a href="/exhibits.html">Exhibits</a></li>
                     <li><a href="/information.html">Information</a></li>
                     <li><a href="/visit_us.html">Visit us</a></li>
                     <li><a href="/about_us.html" class="active_page">About us</a></li>
@@ -74,7 +75,7 @@
             <div class="triobuttons">
                 <a href="/information.html#prices_i_p" class="button b_green triobutton">Prices</a>
                 <a href="/information.html" class="button b_green triobutton">Opening hours</a>
-                <a href="/events_and_exhibits.html" class="button b_green triobutton">Events and Exhibits</a>
+                <a href="/exhibits.html" class="button b_green triobutton">Exhibits</a>
             </div>
         </div>
     </main>
@@ -133,25 +134,22 @@
                 </div>
             </div>
             <div class="f_boxes_f links links_f">
-                <a href="">
-                    <p class="item">Events and Exhibits</p>
-                </a>
-                <a href="">
+                <a href="/visit_us.html#get_involved">
                     <p class="item">Get involed</p>
                 </a>
-                <a href="">
+                <a href="/visit_us.html#explore_section">
                     <p class="item">Explore</p>
                 </a>
-                <a href="">
+                <a href="/information.html#prices_i_p">
                     <p class="item">Prices</p>
                 </a>
-                <a href="">
+                <a href="/information.html#accessibility">
                     <p class="item">Accessibility</p>
                 </a>
-                <a href="">
+                <a href="/information.html#shop">
                     <p class="item">Shop</p>
                 </a>
-                <a href="">
+                <a href="/information.html#food_and_drink">
                     <p class="item">Food and drink</p>
                 </a>
             </div>
