--- a/contact_us.html
+++ b/contact_us.html
@@ -27,7 +27,8 @@
             <nav class="nav_right">
                 <ul>
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/events_and_exhibits.html">Events and Exhibits</a></li>
+                    <li><a href="/events.html">Events</a></li>
+                    <li><a href="/exhibits.html">Exhibits</a></li>
                     <li><a href="/information.html">Information</a></li>
                     <li><a href="/visit_us.html">Visit us</a></li>
                     <li><a href="/about_us.html">About us</a></li>
@@ -46,7 +47,7 @@
             <div class="grid3fit padding1rem gridcenter flexcenter">
                 <div class="contact_us_text">
                     <div class="padding1rem">
-                        <p>You can get in touch with us at:</p>
+                        <p class="bold">Contact us at:</p>
                         <div class="contact_us">
                             <p class="item">Phone: +47 38373635</p>
                             <p class="item">E-mail: CSMuseum@museum.com</p>
@@ -143,25 +144,22 @@
                 </div>
             </div>
             <div class="f_boxes_f links links_f">
-                <a href="">
-                    <p class="item">Events and Exhibits</p>
-                </a>
-                <a href="">
+                <a href="/visit_us.html#get_involved">
                     <p class="item">Get involed</p>
                 </a>
-                <a href="">
+                <a href="/visit_us.html#explore_section">
                     <p class="item">Explore</p>
                 </a>
-                <a href="">
+                <a href="/information.html#prices_i_p">
                     <p class="item">Prices</p>
                 </a>
-                <a href="">
+                <a href="/information.html#accessibility">
                     <p class="item">Accessibility</p>
                 </a>
-                <a href="">
+                <a href="/information.html#shop">
                     <p class="item">Shop</p>
                 </a>
-                <a href="">
+                <a href="/information.html#food_and_drink">
                     <p class="item">Food and drink</p>
                 </a>
             </div>
