--- a/events.html
+++ b/events.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Community Science Museum - Events and Exhibition</title>
-    <meta name="describtion" content="Stay updated on our latest events and exhibits. Explore a diverse range of science-related showcases and experiences. Don't miss out on our upcoming attractions.">
+    <title>Community Science Museum - Events</title>
+    <meta name="describtion" content="Stay updated on our latest events. Explore a diverse range of science-related showcases and experiences. Don't miss out on our upcoming attractions.">
     <link rel="stylesheet" href="global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +27,8 @@
             <nav class="nav_right">
                 <ul>
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/events_and_exhibits.html" class="active_page">Events and Exhibits</a></li>
+                    <li><a href="/events.html" class="active_page">Events</a></li>
+                    <li><a href="/exhibits.html">Exhibits</a></li>
                     <li><a href="/information.html">Information</a></li>
                     <li><a href="/visit_us.html">Visit us</a></li>
                     <li><a href="/about_us.html">About us</a></li>
@@ -39,7 +40,7 @@
     <main class="dark_background">
         <section class="header_image" id="header_page">
             <div class="header_text_o">
-                <h1>Events and Exhibits</h1>
+                <h1>Events</h1>
             </div>
         </section>
         <section class="h_s_news section_padding" id="news_section">
@@ -82,93 +83,14 @@
                 </div>
             </div>
         </section>
-        <section class="h_s_news section_padding" id="exhibition_spaces">
-            <h2 class="header_titlebox b_green">Exhibition Spaces</h2>
-            <div class="grid3fit  content_wrap">
-                <div class="exhibitbox" id="cosmology">
-                    <div class="remarea">
-                        <h3 class="title">Cosmology</h3>
-                    </div>
-                    <p>Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’, explores the
-                        night sky and what we can see and know about the universe around us. We’ll locate the various
-                        constellations and galaxies that can be seen and learn a bit about the early navigators who used
-                        the stars to travel by.</p>
-                    <p>Follow the journey of our solar exploration: from early Arab traders, to Galileo’s telescope, to
-                        the latest exploration of the planets in our solar system.</p>
-                    <div class="newsbox_img">
-                        <div class="product_img">
-                            <img src="images/andrew-ruiz-348421.jpg" alt="The moon image">
-                        </div>
-                    </div>
-                </div>
-                <div class="exhibitbox" id="evolution">
-                    <div class="remarea">
-                        <h3 class="title">Evolution</h3>
-                    </div>
-                    <p>For centuries, philosophers and scientists have wrestled with the question of our origins. Where
-                        do we come from and how did we get here? Since Darwin proposed his theory of evolution we have
-                        had a framework for exploring and understanding our place in this world.</p>
-                    <p>Discover the origins of life on this planet and how the species we know today have evolved our
-                        time. You can also take some time to meet a few of the creatures who didn’t survive, including
-                        our Woolly Mammoth, the Dodos, and a number of dinosaurs too.</p>
-                    <div class="newsbox_img">
-                        <div class="product_img">
-                            <img src="images/evolution.png" alt="Image of people">
-                        </div>
-                    </div>
-                </div>
-                <div class="exhibitbox" id="biology_and_medicine">
-                    <div class="remarea padding1rem">
-                        <h3 class="title">Biology and Medicine</h3>
-                    </div>
-                    <p>From micro-organisms to the human body, major breakthroughs in biology are offering us unique
-                        insights into the great wonders of the tiny world.</p>
-                    <p>For many people their life expectancy is much longer and their quality of life much improved,
-                        thanks to the growth of our understanding of medicine. Over a series of exhibits we explore the
-                        history of medicine and take a look at some major breakthroughs including the discovery of
-                        penicillin and the first heart transplant.</p>
-                    <p>Many of our great medicinal discoveries have come not only from the lab, but also from observing
-                        animals in the wild. Often our fellow creatures have beat us to it.</p>
-                    <div class="newsbox_img">
-                        <div class="product_img">
-                            <img src="images/heart-2607178_1920.jpg" alt="Image of a heart imitation">
-                        </div>
-                    </div>
-                </div>
-                <div class="exhibitbox" id="robotics_and_AI">
-                    <div class="remarea">
-                        <h3 class="title">Robotics and AI</h3>
-                    </div>
-                    <p>Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’, explores the
-                        night sky and what we can see and know about the universe around us. We’ll locate the various
-                        constellations and galaxies that can be seen and learn a bit about the early navigators who used
-                        the stars to travel by.</p>
-                    <p>Follow the journey of our solar exploration: from early Arab traders, to Galileo’s telescope, to
-                        the latest exploration of the planets in our solar system.</p>
-                    <div class="newsbox_img">
-                        <div class="product_img">
-                            <img src="images/robot.png" alt="Image of a robot">
-                        </div>
-                    </div>
-                </div>
-                <div class="exhibitbox" id="ecology">
-                    <div class="remarea">
-                        <h3 class="title">Ecology </h3>
-                    </div>
-                    <p>As we learn more and more of the impact humans are having on the planet, the more important it
-                        becomes that scientists explore how to create a sustainable future not just for humans but for
-                        the whole planet.</p>
-                    <div class="newsbox_img">
-                        <div class="product_img">
-                            <img src="images/ecology.png" alt="Image of bottom vegetation">
-                        </div>
-                    </div>
-                </div>
+        <div class="flexwrap content_wrap gap1rem">
+            <div class="space">
+                <a href="/exhibits.html" class="button b_blue fontsize1_1rem">Exhibits page</a>
             </div>
-        </section>
-        <div class="space"><a href="/information.html" class="button b_blue fontsize1_1rem">Go to information page</a>
+            <div class="space">
+                <a href="/information.html" class="button b_blue fontsize1_1rem">Information page</a>
+            </div>
         </div>
-        <div class="images celso"></div>
     </main>
     <footer>
         <div class="gridfit250 content_wrap">
@@ -225,25 +147,22 @@
                 </div>
             </div>
             <div class="f_boxes_f links links_f">
-                <a href="">
-                    <p class="item">Events and Exhibits</p>
-                </a>
-                <a href="">
+                <a href="/visit_us.html#get_involved">
                     <p class="item">Get involed</p>
                 </a>
-                <a href="">
+                <a href="/visit_us.html#explore_section">
                     <p class="item">Explore</p>
                 </a>
-                <a href="">
+                <a href="/information.html#prices_i_p">
                     <p class="item">Prices</p>
                 </a>
-                <a href="">
+                <a href="/information.html#accessibility">
                     <p class="item">Accessibility</p>
                 </a>
-                <a href="">
+                <a href="/information.html#shop">
                     <p class="item">Shop</p>
                 </a>
-                <a href="">
+                <a href="/information.html#food_and_drink">
                     <p class="item">Food and drink</p>
                 </a>
             </div>
