changes events name to news

--- a/information.html
+++ b/information.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Science Museum - Information</title>
     <meta name="describtion" content="Find essential information for planning your visit. Get details on prices, opening hours, etc. Prepare for an exciting journey into the world of science.">
+    <link rel="icon" href="/images/open-science-735787-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +28,7 @@
             <nav class="nav_right">
                 <ul>
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/events.html">Events</a></li>
+                    <li><a href="/news.html">News</a></li>
                     <li><a href="/exhibits.html">Exhibits</a></li>
                     <li><a href="/information.html" class="active_page">Information</a></li>
                     <li><a href="/visit_us.html">Visit us</a></li>
@@ -101,13 +102,13 @@
                     </div>
                     <h3 class="fontsize1_1rem">News:</h3>
                     <div class="f_boxes_f links">
-                        <a href="/events.html#Professor_of_aeronautics">
+                        <a href="/news.html#Professor_of_aeronautics">
                             <h4 class="item fontsize1_1rem">Visiting Professor of Aeronautics</h4>
                         </a>
-                        <a href="/events.html#night_in_the_museum">
+                        <a href="/news.html#night_in_the_museum">
                             <h4 class="item fontsize1_1rem">Night in the museum</h4>
                         </a>
-                        <a href="/events.html#energetica_echibiton_on_loan">
+                        <a href="/news.html#energetica_echibiton_on_loan">
                             <h4 class="item fontsize1_1rem">Energetica Echibiton on Loan</h4>
                         </a>
                     </div>
