--- a/news.html
+++ b/news.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Community Science Museum - Events</title>
-    <meta name="describtion" content="Stay updated on our latest events. Explore a diverse range of science-related showcases and experiences. Don't miss out on our upcoming attractions.">
+    <title>Community Science Museum - News</title>
+    <meta name="describtion" content="Stay updated on our latest events and exhibitions. Explore a diverse range of science-related showcases and experiences. Don't miss out on our upcoming attractions.">
+    <link rel="icon" href="/images/open-science-735787-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +28,7 @@
             <nav class="nav_right">
                 <ul>
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/events.html" class="active_page">Events</a></li>
+                    <li><a href="/news.html" class="active_page">News</a></li>
                     <li><a href="/exhibits.html">Exhibits</a></li>
                     <li><a href="/information.html">Information</a></li>
                     <li><a href="/visit_us.html">Visit us</a></li>
@@ -40,11 +41,11 @@
     <main class="dark_background">
         <section class="header_image" id="header_page">
             <div class="header_text_o">
-                <h1>Events</h1>
+                <h1>News</h1>
             </div>
         </section>
         <section class="h_s_news section_padding" id="news_section">
-            <h2 class="header_titlebox b_green">News</h2>
+            <h2 class="header_titlebox b_green">Special events and exhibitions news</h2>
             <div class="grid3fit  content_wrap">
                 <div class="newsbox" id="Professor_of_aeronautics">
                     <h3 class="title">Visiting Professor of Aeronautics</h3>
