--- a/contact_us.html
+++ b/contact_us.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Science Museum - Contact us</title>
     <meta name="describtion" content="Reach out to us for inquiries, feedback, or to plan your visit. Our team is here to assist you with any questions you may have. Get in touch today.">
+    <link rel="icon" href="/images/open-science-735787-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +28,7 @@
             <nav class="nav_right">
                 <ul>
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/events.html">Events</a></li>
+                    <li><a href="/news.html">News</a></li>
                     <li><a href="/exhibits.html">Exhibits</a></li>
                     <li><a href="/information.html">Information</a></li>
                     <li><a href="/visit_us.html">Visit us</a></li>
