--- a/exhibits.html
+++ b/exhibits.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Science Museum - Exhibition</title>
     <meta name="describtion" content="Explore a diverse range of science-related showcases and experiences.">
+    <link rel="icon" href="/images/open-science-735787-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +28,7 @@
             <nav class="nav_right">
                 <ul>
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/events.html">Events</a></li>
+                    <li><a href="/news.html">News</a></li>
                     <li><a href="/exhibits.html" class="active_page">Exhibits</a></li>
                     <li><a href="/information.html">Information</a></li>
                     <li><a href="/visit_us.html">Visit us</a></li>
@@ -129,7 +130,7 @@
         </section>
         <div class="flexwrap content_wrap gap1rem">
             <div class="space">
-                <a href="/events.html" class="button b_blue fontsize1_1rem">Events page</a>
+                <a href="/news.html" class="button b_blue fontsize1_1rem">Special events and exhibitions news page</a>
             </div>
             <div class="space">
                 <a href="/information.html" class="button b_blue fontsize1_1rem">Information page</a>
