--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Science Museum - Home</title>
     <meta name="describtion" content="Discover the wonders of science and exploration at our museum. Immerse yourself in interactive exhibits and ignite your passion for the world around us.">
+    <link rel="icon" href="/images/open-science-735787-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +28,7 @@
             <nav class="nav_right">
                 <ul>
                     <li><a href="/index.html" class="active_page">Home</a></li>
-                    <li><a href="/events.html">Events</a></li>
+                    <li><a href="/news.html">News</a></li>
                     <li><a href="/exhibits.html">Exhibits</a></li>
                     <li><a href="/information.html">Information</a></li>
                     <li><a href="/visit_us.html">Visit us</a></li>
@@ -69,27 +70,27 @@
             </div>
         </div>
         <section class="h_s_news section_padding">
-            <a href="/events.html#news_section">
+            <a href="/news.html#news_section">
                 <h2 class="header_titlebox b_green">News - Special Events & Exhibitions</h2>
             </a>
             <div class="grid3fit  content_wrap">
-                <a href="/events.html" class="productbox text_black">
+                <a href="/news.html" class="productbox text_black">
                     <div class="product_img"><img src="images/plane.png" alt="Visiting Professor of Aeronautics image">
                     </div>
                     <h3>Visiting Professor of Aeronautics</h3>
                 </a>
-                <a href="/events.html#night_in_the_museum" class="productbox text_black">
+                <a href="/news.html#night_in_the_museum" class="productbox text_black">
                     <div class="product_img"><img src="images/roberto-nickson-396152.jpg"
                             alt="Night in the Museum image"></div>
                     <h3>Night in the Museum</h3>
                 </a>
-                <a href="/events.html#Energetica_exhibition_on_loan" class="productbox text_black">
+                <a href="/news.html#Energetica_exhibition_on_loan" class="productbox text_black">
                     <div class="product_img"><img src="images/lightenergy.png"
                             alt="Visiting Professor of Aeronautics image"></div>
                     <h3>Energetica Exhibition on Loan</h3>
                 </a>
             </div>
-            <div class="space"><a href="/events.html#news_section" class="button b_green">Find out more</a>
+            <div class="space"><a href="/news.html#news_section" class="button b_green">Find out more</a>
             </div>
         </section>
         <section class="h_s_explore section_padding">
