--- a/visit_us.html
+++ b/visit_us.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Science Museum - Visit us</title>
     <meta name="describtion" content="Plan your visit to our museum. Discover how to get here, learn about ticket options, and explore what awaits you when you step through our doors. Start your adventure now.">
+    <link rel="icon" href="/images/open-science-735787-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,7 +28,7 @@
             <nav class="nav_right">
                 <ul>
                     <li><a href="/index.html">Home</a></li>
-                    <li><a href="/events.html">Events</a></li>
+                    <li><a href="/news.html">News</a></li>
                     <li><a href="/exhibits.html">Exhibits</a></li>
                     <li><a href="/information.html">Information</a></li>
                     <li><a href="/visit_us.html" class="active_page">Visit us</a></li>
