--- a/information.html
+++ b/information.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Science Museum - Information</title>
-    <meta name="describtion" content="Find essential information for planning your visit. Get details on prices, opening hours, etc. Prepare for an exciting journey into the world of science.">
+    <meta name="describtion"
+        content="Find essential information for planning your visit. Get details on prices, opening hours, etc. Prepare for an exciting journey into the world of science.">
     <link rel="icon" href="/images/open-science-735787-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,39 +44,39 @@
             <div class="header_text_o">
                 <h1>Information</h1>
             </div>
-            <div class="grid3fit content_wrap">
+            <div class="grid3fit content_wrap opening_hours">
                 <div class="boxmargin white_background padding1rem g_one">
-                    <div class="green_underline">
-                        <h2 class="bold big_title">Opening hours</h2>
-                    </div>
-                    <div class="item">
-                        <p class="item_l">Monday:</p>
-                        <p class="ho_day_t">Closed</p>
-                    </div>
-                    <div class="item">
-                        <p class="item_l">Tuesday:</p>
-                        <p class="ho_day_t">10:00 – 16:00</p>
-                    </div>
-                    <div class="item">
-                        <p class="item_l">Wednesday:</p>
-                        <p class="ho_day_t">10:00 – 16:00</p>
-                    </div>
-                    <div class="item">
-                        <p class="item_l">Thursday:</p>
-                        <p class="ho_day_t">10:00 – 16:00</p>
-                    </div>
-                    <div class="item">
-                        <p class="item_l">Friday:</p>
-                        <p class="ho_day_t">10:00 – 19:00</p>
-                    </div>
-                    <div class="item">
-                        <p class="item_l">Saturday:</p>
-                        <p class="ho_day_t">9:00 – 16:00</p>
-                    </div>
-                    <div class="item">
-                        <p class="item_l">Sunday:</p>
-                        <p class="ho_day_t">9:00 – 13:00</p>
-                    </div>
+                    <h2 class="green_underline bold big_title">Opening hours</h2>
+                    <ul class="zeropadding">
+                        <li class="item">
+                            <p class="item_l">Monday:</p>
+                            <p class="ho_day_t">Closed</p>
+                        </li>
+                        <li class="item">
+                            <p class="item_l">Tuesday:</p>
+                            <p class="ho_day_t">10:00 – 16:00</p>
+                        </li>
+                        <li class="item">
+                            <p class="item_l">Wednesday:</p>
+                            <p class="ho_day_t">10:00 – 16:00</p>
+                        </li>
+                        <li class="item">
+                            <p class="item_l">Thursday:</p>
+                            <p class="ho_day_t">10:00 – 16:00</p>
+                        </li>
+                        <li class="item">
+                            <p class="item_l">Friday:</p>
+                            <p class="ho_day_t">10:00 – 19:00</p>
+                        </li>
+                        <li class="item">
+                            <p class="item_l">Saturday:</p>
+                            <p class="ho_day_t">9:00 – 16:00</p>
+                        </li>
+                        <li class="item">
+                            <p class="item_l">Sunday:</p>
+                            <p class="ho_day_t">9:00 – 13:00</p>
+                        </li>
+                    </ul>
                 </div>
                 <div class="boxmargin white_background padding1rem g_two" id="accessibility">
                     <div class="green_underline">
@@ -101,35 +102,35 @@
                         <h2 class="bold big_title">Events and Exhibits</h2>
                     </div>
                     <h3 class="fontsize1_1rem">News:</h3>
-                    <div class="f_boxes_f links">
-                        <a href="/news.html#Professor_of_aeronautics">
+                    <ul class="zeropadding flexone links">
+                        <li><a href="/news.html#Professor_of_aeronautics">
                             <h4 class="item fontsize1_1rem">Visiting Professor of Aeronautics</h4>
-                        </a>
-                        <a href="/news.html#night_in_the_museum">
+                        </a></li>
+                        <li><a href="/news.html#night_in_the_museum">
                             <h4 class="item fontsize1_1rem">Night in the museum</h4>
-                        </a>
-                        <a href="/news.html#energetica_echibiton_on_loan">
+                        </a></li>
+                        <li><a href="/news.html#energetica_echibiton_on_loan">
                             <h4 class="item fontsize1_1rem">Energetica Echibiton on Loan</h4>
-                        </a>
-                    </div>
+                        </a></li>
+                    </ul>
                     <h3 class="fontsize1_1rem">Exhibits:</h3>
-                    <div class="f_boxes_f links">
-                        <a href="/exhibits.html#cosmology">
+                    <ul class="zeropadding flexone links">
+                        <li><a href="/exhibits.html#cosmology">
                             <h4 class="item fontsize1_1rem">Cosmology</h4>
-                        </a>
-                        <a href="/exhibits.html#evolution">
+                        </a></li>
+                        <li><a href="/exhibits.html#evolution">
                             <h4 class="item fontsize1_1rem">Evolution</h4>
-                        </a>
-                        <a href="/exhibits.html#biology_and_medicine">
+                        </a></li>
+                        <li><a href="/exhibits.html#biology_and_medicine">
                             <h4 class="item fontsize1_1rem">Biology and Medicine</h4>
-                        </a>
-                        <a href="/exhibits.html#robotics_and_AI">
+                        </a></li>
+                        <li><a href="/exhibits.html#robotics_and_AI">
                             <h4 class="item fontsize1_1rem">Robotic and AI</h4>
-                        </a>
-                        <a href="/exhibits.html#ecology">
+                        </a></li>
+                        <li><a href="/exhibits.html#ecology">
                             <h4 class="item fontsize1_1rem">Ecology</h4>
-                        </a>
-                    </div>
+                        </a></li>
+                    </ul>
                 </div>
             </div>
         </section>
@@ -198,48 +199,54 @@
     </main>
     <footer>
         <div class="gridfit250 content_wrap">
-            <div class="f_boxes_f">
+            <div class="flexone">
                 <div class="csm_i">
                     <p>Community Science Museum</p>
                     <p>Verket 1 2580 Folldal</p>
                 </div>
-                <div class="open_hours">
+                <ul class="zeropadding open_hours">
                     <p class="bold">Opening hours:</p>
-                    <div class="item">
+                    <li class="item">
                         <p class="item_l">Monday:</p>
                         <p class="ho_day_t">Closed</p>
-                    </div>
-                    <div class="item">
+                    </li>
+                    <li class="item">
                         <p class="item_l">Tuesday:</p>
                         <p class="ho_day_t">10:00 – 16:00</p>
-                    </div>
-                    <div class="item">
+                    </li>
+                    <li class="item">
                         <p class="item_l">Wednesday:</p>
                         <p class="ho_day_t">10:00 – 16:00</p>
-                    </div>
-                    <div class="item">
+                    </li>
+                    <li class="item">
                         <p class="item_l">Thursday:</p>
                         <p class="ho_day_t">10:00 – 16:00</p>
-                    </div>
-                    <div class="item">
+                    </li>
+                    <li class="item">
                         <p class="item_l">Friday:</p>
                         <p class="ho_day_t">10:00 – 19:00</p>
-                    </div>
-                    <div class="item">
+                    </li>
+                    <li class="item">
                         <p class="item_l">Saturday:</p>
                         <p class="ho_day_t">9:00 – 16:00</p>
-                    </div>
-                    <div class="item">
+                    </li>
+                    <li class="item">
                         <p class="item_l">Sunday:</p>
                         <p class="ho_day_t">9:00 – 13:00</p>
-                    </div>
-                </div>
+                    </li>
+                </ul>
             </div>
-            <div class="f_boxes_f">
+            <div class="flexone">
                 <div class="contact_us">
                     <p class="bold">Contact us:</p>
-                    <p class="item">Phone: +47 38373635</p>
-                    <p class="item">E-mail: CSMuseum@museum.com</p>
+                    <div class="item">
+                        <p class="item">Phone:</p>
+                        <p class="item"> +47 38373635</p>
+                    </div>
+                    <div class="item">
+                        <p class="i tem">E-mail:</p>
+                        <p class="item">CSMuseum@museum.com</p>
+                    </div>
                 </div>
                 <div class="social_media">
                     <a href="/">
@@ -250,27 +257,27 @@
                     </a>
                 </div>
             </div>
-            <div class="f_boxes_f links links_f">
-                <a href="/visit_us.html#get_involved">
-                    <p class="item">Get involed</p>
-                </a>
-                <a href="/visit_us.html#explore_section">
-                    <p class="item">Explore</p>
-                </a>
-                <a href="/information.html#prices_i_p">
-                    <p class="item">Prices</p>
-                </a>
-                <a href="/information.html#accessibility">
-                    <p class="item">Accessibility</p>
-                </a>
-                <a href="/information.html#shop">
-                    <p class="item">Shop</p>
-                </a>
-                <a href="/information.html#food_and_drink">
-                    <p class="item">Food and drink</p>
-                </a>
-            </div>
-            <div class="f_boxes_f">
+            <nav class="flexone links links_f">
+                <li><a href="/visit_us.html#get_involved">
+                        <p class="item">Get involed</p>
+                    </a></li>
+                <li><a href="/visit_us.html#explore_section">
+                        <p class="item">Explore</p>
+                    </a></li>
+                <li><a href="/information.html#prices_i_p">
+                        <p class="item">Prices</p>
+                    </a></li>
+                <li><a href="/information.html#accessibility">
+                        <p class="item">Accessibility</p>
+                    </a></li>
+                <li><a href="/information.html#shop">
+                        <p class="item">Shop</p>
+                    </a></li>
+                <li><a href="/information.html#food_and_drink">
+                        <p class="item">Food and drink</p>
+                    </a></li>
+            </nav>
+            <div class="flexone">
                 <form action="post" class="center_n newsletter">
                     <p>Subscribe to our newsletter</p>
                     <label for="name" style="display: none;">Name</label>
@@ -282,7 +289,7 @@
                                 name="Accept_p_s">Accept <a href="/">privacy
                                 statement</a></label>
                     </div>
-                    <input type="submit" name="submit" value="Subscribe" class="button b_green send_b news_b">
+                    <button type="submit" name="submit" class="button b_green send_b news_b">Subscribe</button>
                 </form>
             </div>
         </div>
