--- a/visit_us.html
+++ b/visit_us.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Science Museum - Visit us</title>
-    <meta name="describtion" content="Plan your visit to our museum. Discover how to get here, learn about ticket options, and explore what awaits you when you step through our doors. Start your adventure now.">
+    <meta name="describtion"
+        content="Plan your visit to our museum. Discover how to get here, learn about ticket options, and explore what awaits you when you step through our doors. Start your adventure now.">
     <link rel="icon" href="/images/open-science-735787-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -82,34 +83,36 @@
                     <div class="green_underline">
                         <h2 class="bold big_title">Opening hours</h2>
                     </div>
-                    <div class="item">
-                        <p class="item_l">Monday:</p>
-                        <p class="ho_day_t">Closed</p>
-                    </div>
-                    <div class="item">
-                        <p class="item_l">Tuesday:</p>
-                        <p class="ho_day_t">10:00 – 16:00</p>
-                    </div>
-                    <div class="item">
-                        <p class="item_l">Wednesday:</p>
-                        <p class="ho_day_t">10:00 – 16:00</p>
-                    </div>
-                    <div class="item">
-                        <p class="item_l">Thursday:</p>
-                        <p class="ho_day_t">10:00 – 16:00</p>
-                    </div>
-                    <div class="item">
-                        <p class="item_l">Friday:</p>
-                        <p class="ho_day_t">10:00 – 19:00</p>
-                    </div>
-                    <div class="item">
-                        <p class="item_l">Saturday:</p>
-                        <p class="ho_day_t">9:00 – 16:00</p>
-                    </div>
-                    <div class="item">
-                        <p class="item_l">Sunday:</p>
-                        <p class="ho_day_t">9:00 – 13:00</p>
-                    </div>
+                    <ul class="zeropadding">
+                        <li class="item">
+                            <p class="item_l">Monday:</p>
+                            <p class="ho_day_t">Closed</p>
+                        </li>
+                        <li class="item">
+                            <p class="item_l">Tuesday:</p>
+                            <p class="ho_day_t">10:00 – 16:00</p>
+                        </li>
+                        <li class="item">
+                            <p class="item_l">Wednesday:</p>
+                            <p class="ho_day_t">10:00 – 16:00</p>
+                        </li>
+                        <li class="item">
+                            <p class="item_l">Thursday:</p>
+                            <p class="ho_day_t">10:00 – 16:00</p>
+                        </li>
+                        <li class="item">
+                            <p class="item_l">Friday:</p>
+                            <p class="ho_day_t">10:00 – 19:00</p>
+                        </li>
+                        <li class="item">
+                            <p class="item_l">Saturday:</p>
+                            <p class="ho_day_t">9:00 – 16:00</p>
+                        </li>
+                        <li class="item">
+                            <p class="item_l">Sunday:</p>
+                            <p class="ho_day_t">9:00 – 13:00</p>
+                        </li>
+                    </ul>
                 </div>
                 <div class="boxmargin white_background padding1rem visit_g_two">
                     <div class="info_img science_img">
@@ -232,48 +235,54 @@
     </main>
     <footer>
         <div class="gridfit250 content_wrap">
-            <div class="f_boxes_f">
+            <div class="flexone opening_hours">
                 <div class="csm_i">
                     <p>Community Science Museum</p>
                     <p>Verket 1 2580 Folldal</p>
                 </div>
-                <div class="open_hours">
+                <ul class="zeropadding open_hours">
                     <p class="bold">Opening hours:</p>
-                    <div class="item">
+                    <li class="item">
                         <p class="item_l">Monday:</p>
                         <p class="ho_day_t">Closed</p>
-                    </div>
-                    <div class="item">
+                    </li>
+                    <li class="item">
                         <p class="item_l">Tuesday:</p>
                         <p class="ho_day_t">10:00 – 16:00</p>
-                    </div>
-                    <div class="item">
+                    </li>
+                    <li class="item">
                         <p class="item_l">Wednesday:</p>
                         <p class="ho_day_t">10:00 – 16:00</p>
-                    </div>
-                    <div class="item">
+                    </li>
+                    <li class="item">
                         <p class="item_l">Thursday:</p>
                         <p class="ho_day_t">10:00 – 16:00</p>
-                    </div>
-                    <div class="item">
+                    </li>
+                    <li class="item">
                         <p class="item_l">Friday:</p>
                         <p class="ho_day_t">10:00 – 19:00</p>
-                    </div>
-                    <div class="item">
+                    </li>
+                    <li class="item">
                         <p class="item_l">Saturday:</p>
                         <p class="ho_day_t">9:00 – 16:00</p>
-                    </div>
-                    <div class="item">
+                    </li>
+                    <li class="item">
                         <p class="item_l">Sunday:</p>
                         <p class="ho_day_t">9:00 – 13:00</p>
-                    </div>
-                </div>
+                    </li>
+                </ul>
             </div>
-            <div class="f_boxes_f">
+            <div class="flexone">
                 <div class="contact_us">
                     <p class="bold">Contact us:</p>
-                    <p class="item">Phone: +47 38373635</p>
-                    <p class="item">E-mail: CSMuseum@museum.com</p>
+                    <div class="item">
+                        <p class="item">Phone:</p>
+                        <p class="item"> +47 38373635</p>
+                    </div>
+                    <div class="item">
+                        <p class="i tem">E-mail:</p>
+                        <p class="item">CSMuseum@museum.com</p>
+                    </div>
                 </div>
                 <div class="social_media">
                     <a href="/">
@@ -284,27 +293,27 @@
                     </a>
                 </div>
             </div>
-            <div class="f_boxes_f links links_f">
-                <a href="/visit_us.html#get_involved">
-                    <p class="item">Get involed</p>
-                </a>
-                <a href="/visit_us.html#explore_section">
-                    <p class="item">Explore</p>
-                </a>
-                <a href="/information.html#prices_i_p">
-                    <p class="item">Prices</p>
-                </a>
-                <a href="/information.html#accessibility">
-                    <p class="item">Accessibility</p>
-                </a>
-                <a href="/information.html#shop">
-                    <p class="item">Shop</p>
-                </a>
-                <a href="/information.html#food_and_drink">
-                    <p class="item">Food and drink</p>
-                </a>
-            </div>
-            <div class="f_boxes_f">
+            <nav class="flexone links links_f">
+                <li><a href="/visit_us.html#get_involved">
+                        <p class="item">Get involed</p>
+                    </a></li>
+                <li><a href="/visit_us.html#explore_section">
+                        <p class="item">Explore</p>
+                    </a></li>
+                <li><a href="/information.html#prices_i_p">
+                        <p class="item">Prices</p>
+                    </a></li>
+                <li><a href="/information.html#accessibility">
+                        <p class="item">Accessibility</p>
+                    </a></li>
+                <li><a href="/information.html#shop">
+                        <p class="item">Shop</p>
+                    </a></li>
+                <li><a href="/information.html#food_and_drink">
+                        <p class="item">Food and drink</p>
+                    </a></li>
+            </nav>
+            <div class="flexone">
                 <form action="post" class="center_n newsletter">
                     <p>Subscribe to our newsletter</p>
                     <label for="name" style="display: none;">Name</label>
@@ -316,7 +325,7 @@
                                 name="Accept_p_s">Accept <a href="/">privacy
                                 statement</a></label>
                     </div>
-                    <input type="submit" name="submit" value="Subscribe" class="button b_green send_b news_b">
+                    <button type="submit" name="submit" class="button b_green send_b news_b">Subscribe</button>
                 </form>
             </div>
         </div>
